add new blog post

--- a/_posts/2019-12-22-blog-post-11.md
+++ b/_posts/2019-12-22-blog-post-11.md
@@ -23,27 +23,27 @@ One important lesson that I learned is that deep learning is not always the best
 I spent about a week working on how to tag items with their food types. 
 At first I came up with a deep learning solution using BERT and new pre-training tasks, but after manually evaluating a couple hundred samples of data myself, I realized that a rule-based approach is most appropriate.
 
-<img src='/images/19f/doordash_office.jpg' width="31%">
-<img src='/images/19f/doordash_trophy.jpg' width="31%">
-<img src='/images/19f/also_like.jpg' width="31%">
+<img src='/images/19f/doordash_office.jpg' width="32%">
+<img src='/images/19f/doordash_trophy.jpg' width="32%">
+<img src='/images/19f/also_like.jpg' width="32%">
 Left, my desk at DoorDash; middle, *not* my trophy; right, the carousel I made.
 
 San Francisco
 ------
 
-Being back in the city again was fine, except this time, many of my Dartmouth and Blend friends, who were here over the summer, went back to school. From Sep 27 - Oct 31, I lived in the [Winsor Hotel](https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwj_5szen7vlAhXUFn0KHYHgAzQYABAAGgJwdg&ohost=www.google.com&cid=CAESQOD2R7T-APRicWd4SRBx69NJh9yOQ8hOd5dmBIL5E4jsJcr7Vdl1PN1T2pMW5XIFCwSfrxCFWDaH7xsBz8vVxrI&sig=AOD64_3sPJjJPGYKvH87QvvIFx9BdEzqZQ&q=&ved=2ahUKEwjhksLen7vlAhXVsJ4KHdN2AHgQ0Qx6BAgQEAE&adurl=), a one-star temporary housing unit just one block away from the DoorDash office. The price was good for my own room with a full-sized bed, but the location was not so great. 
+Being back in the city again was fine, except this time, many of my Dartmouth and Blend friends, who were here over the summer, went back to school. From Sep 27 - Oct 31, I lived in the Winsor Hotel, a one-star temporary housing unit just one block away from the DoorDash office. The price was good for my own room with a full-sized bed, but the location was not so great. 
 
 Later, I moved back to the student homestay in Chinatown, where I lived for the summer.
 
 ### Places
 
 * Sausalito
-* Office visits: Flexport; Robinhood, Thumbtack, Affirm, Palantir
+* Office visits: Flexport, Accenture @ Salesforce Tower; Robinhood, Thumbtack, Affirm, Palantir
 * Bars: PianoFight
 
-<img src='/images/19f/winsor.jpg' width="31%">
-<img src='/images/19f/sixth_street.jpg' width="31%">
-<img src='/images/19f/tenderloin.jpg' width="31%">
+<img src='/images/19f/winsor.jpg' width="32%">
+<img src='/images/19f/sixth_street.jpg' width="32%">
+<img src='/images/19f/tenderloin.jpg' width="32%">
 Left, my room at the Winsor Hotel; middle, 6th street; right, the Tenderloin.
 
 EMNLP-IJCNLP
@@ -69,9 +69,9 @@ I had also added a sign saying I was a prospective PhD student, but unfortunatel
 
 Throughout the conference, I frequently went to the hot tub and sauna at our hotel, which was a great place for me to get away from all the sounds of the city and spend some time alone with my thoughts.
 
-<img src='/images/19f/victoria_peak.jpg' width="31%">
-<img src='/images/19f/hk_disneyland.jpg' width="31%">
-<img src='/images/19f/big_buddha.jpg' width="31%">
+<img src='/images/19f/victoria_peak.jpg' width="32%">
+<img src='/images/19f/hk_disneyland.jpg' width="32%">
+<img src='/images/19f/big_buddha.jpg' width="32%">
 Left, Victoria Peak; middle, Hong Kong disneyland with Chengyu; right, the Big Buddha.
 
 NeurIPS
@@ -95,16 +95,21 @@ Moving forward, I will try to see research as a creative art rather than a techn
 Health & Fitness
 ------
 I originally had hoped to hit 2 plates on the bench press by the end of the year, but I didn't even come close. 
+I worked out at 24-hour fitness, sometimes with my friend Ashar, but was set back by various things.
 
 **Meniscectomy.** Last December, I had hurt my knee from squatting, which led to an IT band injury. 
 After playing tennis while I was home, I felt more pain, so I went to see James Chen, an orthopaedic surgeon in SF.
 I got a knee MRI and Dr. Chen told me I had a sizable tear in my meniscus. 
-
-On November 22, I had a partial meniscectomy, a simple surgery. The recovery, however, was not as easy as I thought it would be. I bought an ice therapy unit, which I used three times a day for five days, and worked from home for the next week. I was not very productive during that time, and it made me realize I take good mobility for granted. After exactly two weeks on crutches, I was able to walk again and was feeling better.
+On November 22, I had a partial meniscectomy, a simple surgery. 
+The recovery, however, was not as easy as I thought it would be. 
+I bought an ice therapy unit, which I used three times a day for five days, and worked from home for the next week. 
+I was not very productive, and I realized that I take good mobility for granted. 
+After exactly two weeks on crutches and some quad-strengthening exercises, I was able to walk again and was feeling better.
 
 **Nose surgeries.** I saw Dr. Jacob Johnson, an ENT in SF. I had a turbinate reduction, a small procedure to help with my breathing/snoring. So far, it hasn't felt like anything changed.
 
 **Getting sick.** I got sick with a runny nose, sore throat, and cough about ten days after my surgery, which turned out to be Moraxella catarrhalis. I felt better after taking Augmentin antibiotics, and then benzonatate.
+
 
 Reading
 ------
@@ -172,17 +177,22 @@ I'm an advocate for transparency, and new grad offers are usually pretty standar
 
 While we're here, I am working on being more comfortable with rejection:
 
-<img src='/images/19f/rejections.jpg' width="95%">
+<img src='/images/19f/rejections.jpg' width="100%">
 
 Closing
 ------
-
-I want to visit Cappadocia, Turkey.
+This term, I learned a lot about software at DoorDash, did a bit of traveling, and got through a surgery. 
+Compared with other terms, however, I did not do as much. 
+And even more importantly, I didn't give recruiting or PhD applications their due diligence in effort. 
+I also didn't get to spend any time on research. 
+I really dropped the ball.
 
 Songs
 ------
 - Lady Gaga: Shallow, Always Remember Us This Way, [Your Song](https://www.youtube.com/watch?v=T8lWjQRhQXY)
 - [This](https://www.youtube.com/watch?v=-S98gtynShg) EDM mix by Sensual Musique.
 
-
+Other
+------
+I want to visit Cappadocia, Turkey.
 
