--- a/_posts/2019-12-22-blog-post-11.md
+++ b/_posts/2019-12-22-blog-post-11.md
@@ -103,13 +103,13 @@ I got a knee MRI and Dr. Chen told me I had a sizable tear in my meniscus.
 On November 22, I had a partial meniscectomy, a simple surgery. 
 The recovery, however, was not as easy as I thought it would be. 
 I bought an ice therapy unit, which I used three times a day for five days, and worked from home for the next week. 
-I was not very productive, and I realized that I take good mobility for granted. 
 After exactly two weeks on crutches and some quad-strengthening exercises, I was able to walk again and was feeling better.
+I was not very productive throughout the whole process, and I realized that I take good mobility for granted. 
 
 **Nose surgeries.** I saw Dr. Jacob Johnson, an ENT in SF. I had a turbinate reduction, a small procedure to help with my breathing/snoring. So far, it hasn't felt like anything changed.
+I had also scheduled a non-invasive balloon septoplasty for the last week, but I ended up getting sick so we couldn't do the procedure.
 
-**Getting sick.** I got sick with a runny nose, sore throat, and cough about ten days after my surgery, which turned out to be Moraxella catarrhalis. I felt better after taking Augmentin antibiotics, and then benzonatate.
-
+**Getting sick.** I got sick with a runny nose, sore throat, and cough about ten days after my surgery, which turned out to be Moraxella catarrhalis. I felt a bit better after taking Augmentin antibiotics, but then after I worked out hard at the gym, my cough came back even worse and I still don't feel well.
 
 Reading
 ------
@@ -150,6 +150,20 @@ Who are my heroes?
 * Julianne Moore is great in *Kingsman: The Golden Circle*.
 * Most tennis players have an idol that they want to play like (usually Federer, but I like Djokovic more). Well, I code, and my coding idol is my mentor from Blend, Danny Hermes.
 * [uuuuuuuukewithme](https://www.youtube.com/watch?v=XnRI7gH_kro)'s singing and persona are so great.
+* Paul Graham writes [excellent blog posts](http://www.paulgraham.com/love.html#f3n).
+
+Closing
+------
+This term, I learned a lot about software at DoorDash, did a bit of traveling, and got through a surgery. 
+Compared with other terms, however, I did not do as much. 
+And even more importantly, I didn't give recruiting or PhD applications their due diligence in effort. 
+I also didn't get to spend any time on research. 
+I really dropped the ball.
+
+I liked this Paul Graham quote:
+```
+The most dangerous liars can be the kids' own parents. If you take a boring job to give your family a high standard of living, as so many people do, you risk infecting your kids with the idea that work is boring. Maybe it would be better for kids in this one case if parents were not so unselfish. A parent who set an example of loving their work might help their kids more than an expensive house.
+```
 
 Recruiting
 ------
@@ -178,14 +192,6 @@ I'm an advocate for transparency, and new grad offers are usually pretty standar
 While we're here, I am working on being more comfortable with rejection:
 
 <img src='/images/19f/rejections.jpg' width="100%">
-
-Closing
-------
-This term, I learned a lot about software at DoorDash, did a bit of traveling, and got through a surgery. 
-Compared with other terms, however, I did not do as much. 
-And even more importantly, I didn't give recruiting or PhD applications their due diligence in effort. 
-I also didn't get to spend any time on research. 
-I really dropped the ball.
 
 Songs
 ------
