--- a/_posts/2019-12-22-blog-post-11.md
+++ b/_posts/2019-12-22-blog-post-11.md
@@ -33,7 +33,7 @@ San Francisco
 
 Being back in the city again was fine, except this time, many of my Dartmouth and Blend friends, who were here over the summer, went back to school. From Sep 27 - Oct 31, I lived in the Winsor Hotel, a one-star temporary housing unit just one block away from the DoorDash office. The price was good for my own room with a full-sized bed, but the location was not so great. 
 
-Later, I moved back to the student homestay in Chinatown, where I lived for the summer.
+Later, I moved back to the student homestay in Chinatown where I lived for the summer.
 
 ### Places
 
@@ -111,6 +111,11 @@ I had also scheduled a non-invasive balloon septoplasty for the last week, but I
 
 **Getting sick.** I got sick with a runny nose, sore throat, and cough about ten days after my surgery, which turned out to be Moraxella catarrhalis. I felt a bit better after taking Augmentin antibiotics, but then after I worked out hard at the gym, my cough came back even worse and I still don't feel well.
 
+<img src='/images/19f/surgery.jpg' width="32%">
+<img src='/images/19f/meniscectomy.jpg' width="32%">
+<img src='/images/19f/meniscectomy_image.jpg' width="32%">
+Left, pre-surgery; middle, post-surgery; right, meniscus tear. 
+
 Reading
 ------
 
@@ -161,9 +166,8 @@ I also didn't get to spend any time on research.
 I really dropped the ball.
 
 I liked this Paul Graham quote:
-```
-The most dangerous liars can be the kids' own parents. If you take a boring job to give your family a high standard of living, as so many people do, you risk infecting your kids with the idea that work is boring. Maybe it would be better for kids in this one case if parents were not so unselfish. A parent who set an example of loving their work might help their kids more than an expensive house.
-```
+
+*The most dangerous liars can be the kids' own parents. If you take a boring job to give your family a high standard of living, as so many people do, you risk infecting your kids with the idea that work is boring. Maybe it would be better for kids in this one case if parents were not so unselfish. A parent who set an example of loving their work might help their kids more than an expensive house.*
 
 Recruiting
 ------
@@ -174,7 +178,7 @@ I'm an advocate for transparency, and new grad offers are usually pretty standar
 
 | Company   | Salary | Signing Bonus | Stock Options     | Offer Date | Deadline | My prediction | 
 |-----------|--------|---------------|-------------------|------------|----------|---------------|
-| Blend     | $125k  | $20k          |                   | Sep 6      | Nov 5    | Unsure        |
+| Blend     | $125k  | $20k          | 55k shares/4 yrs  | Sep 6      | Nov 5    | Unsure        |
 | Thumbtack | $125k  | $15k          | \~$100k RSU/4 yrs | Oct 24     | Nov 15   | No            |
 
 **Rejections:**
