--- a/_drafts/2020-3-13-blog-post-12.md
+++ b/_drafts/2020-3-13-blog-post-12.md
@@ -4,58 +4,123 @@ date: 2020-3-13
 permalink: /posts/2019/12/blog-post-11/
 tags:
   - dartmouth
+  - Tri-Kap
+  - computer vision
+  - grad school
 ---
-
-
 
 Senior Thesis
 ------
+I am very fortunate to work with Lorenzo Torresani for my senior thesis this term. 
+He explains things cleary and has shown on multiple occasions that he understands low-level details better than I expected. 
+I worked on some curriculum learning ideas applied to self-supervised learning, and my work is still in progress. 
 
-
-
+It was nice to have a desk in the machine learning lab at Dartmouth. 
+Through the lab, I learned a lot from Yiren and Ruibo, who PhD students in the lab, and got to know Soroush, a Dartmouth professor who works on social media and NLP.
 
 Coursework
 ------
-**Impact Design (COSC 29).** 
-
 **Love and Desire in Modern Chinese Literature (ASCL 60).**
 This class explored a number of short stories and novellas written by Chinese authors from 1900-2000, translated into english.
 I interpreted stories from early 1900s as cautionary tales against free love during the time of arranged marriages. 
+Later stories, many of which were memoirs, talked about love despite the oppression of the Chinese government during the rusticated youth period or love in contrast with the context of traditional chinese life. 
+I liked Professor Gibbs, who taught the class, and he pushed me to further explore my interest in reading as a reflection of the reader and writing as a reflection of the writer. 
+My takeaway from this course is to approach reading as "borrowing someone else's mind," which can give us insight into how people from different time periods lived and help us learn from those experiences. 
+
+**Impact Design (COSC 29).** 
+This class was about how to design products to *delight* people.
+The main project of the course was designing projects for two autistic children at a nearby school.
+The kids we were designing for, Lilly and Riley, had developmental ages around 2-4 and loved to listen to music.
+Our team designed a personalized storybook with their favorite songs that played when they pressed a button.
+The kids and their caretakers seemed to love our toys, and I loved working with them.
+Having grown up going to a magnet high school and Dartmouth, I had never interacted much with autistic children, and so this was a magical experience for me.
 
 Tri-Kap
 ------
+I lived in my fraternity house this term, and I loved it. 
+The location was great, and it was a good way for me to get to know the other brothers in my fraternity better, especially the new class of '22s. 
+I had a good time with friends (Prahlad, Kevin, Isabel) during our Winter Carnival weekend and during the last weekend of the term.
 
+<img src='/images/20w/IMG_3782.jpeg' width="32%">
+<img src='/images/20w/IMG_3889.jpeg' width="32%">
+<img src='/images/20w/IMG_4972.jpeg' width="32%">
+Left, my room at Tri-Kap; middle, view from Tri-Kap porch, right, me with friends.
 
+Open House Visits
+------
+**Carnegie Mellon University.** I visited Pittsburgh from Feb 25-28 for the open house for admitted Masters of Language Technology (MLT) students. 
+CMU has the largest academic NLP program in the world, and so it was exciting and inspiring to be in an environment with around 100 PhD students and 30 faculty working in NLP. 
+The MLT program, however, does not favor the students, in my opinion, because students (1) have to find funding, (2) typically do not know who their advisor will be, and (3) are not guaranteed admission to the PhD program after. 
+Moreover, although CMU has many strong faculty in NLP, some faculty were comparatively weaker and less updated on deep learning.
 
-<img src='/images/19f/victoria_peak.jpg' width="32%">
-<img src='/images/19f/hk_disneyland.jpg' width="32%">
-<img src='/images/19f/big_buddha.jpg' width="32%">
+**University of Southern California.** I visited LA from March 5-7 for the open house for admitted PhD students. 
+My potential advisor, Nanyun Peng, was very nice, and I liked everyone in the lab. 
+LA as a location was great, especially with the Information Sciences Institute (ISI) near Marina del Rey. 
+I felt better about the student body at USC (everyone seems happy) than at CMU. 
+Two important logistical considerations for me were that the lab space at ISI was quite small, and that the commute from USC to ISI can take up to an hour. 
 
-
-
+<img src='/images/20w/yuxuan.jpeg' width="32%">
+<img src='/images/20w/IMG_3871.jpeg' width="32%">
+<img src='/images/20w/IMG_7245.jpeg' width="32%">
+Left, me with my friend Yuxuan on the Randy Pausch Memorial Bridge; middle, Muscle Beach; right, USC grad school crew.
 
 Health & Fitness
 ------
+**Working out.** I worked out relatively consistently this term, except for two weeks when I was sick.
+I lifted every sunday with my friends John and Prahlad, and it was a blast. 
+I focused on good form and did lower body exercises on machines to recover from my injury, and did some cardio. 
+I ate a pretty good diet, with not so many carbs. 
+By the end of the term, I weighed 143 (compared with my original weight of 150), and could still bench 175 for 1. 
 
-Physical therapy. I went to see Dr. Samuel Johnson, a physical therapist at the DHMC Heater Road. He told me that my leg muscles were quite tight and that I should stretch my hamstrings and IT bands. He gave me a good program and told me that I should even do weighted squats, which I was pretty wary of doing.
+**Physical therapy.** I went to see Dr. Samuel Johnson, a physical therapist at the DHMC Heater Road. He told me that my leg muscles were quite tight and that I should stretch my hamstrings and IT bands. He gave me a good program and told me that I should even do weighted squats, which I was pretty wary of doing.
+
+Applying to Grad School
+------
+I dreamed of getting into a top PhD program in natural language processing, but when I applied, I had no idea how competitive it would be to get in the top programs. 
+It turns out that very few people make it to the top programs. 
+At Stanford, there are four faculty in the NLP group, and I didn't know any of them or anyone who knew them. 
+MIT only has two (?) faculty working on NLP. 
+University of Washington, my realistic reach school, has several faculty, but it remained pretty competitive, with only 100 students accepted from 2000 applicants to the CS program. 
+Here are my results:
+
+| School | Program | Outcome | Notification Date | My Prediction | Interview | Knew a Prof | 
+|--------|---------|---------|-------------------|------------|-----------|-------------|
+| **University of Cambridge | MPhil Computer Science | Accepted | Jan 29 | Maybe | Vlachos | Yes** |
+| **Carnegie Mellon University | PhD Language Technology | Accepted (Masters) | Feb 3 | No | Neubig | No** | 
+| Princeton University | PhD Computer Science | Rejected | Feb 5 | Yes | No | No | 
+| University of Washington | PhD Computer Science | Rejected | Feb 7 | Maybe | Althoff | No | 
+| Stanford University | PhD Computer Science | Rejected | Feb 11 | No | No | No | 
+| **University of Southern California | PhD Computer Science | Accepted | Feb 19 | Yes | Waived | Yes** | 
+| Massachusetts Institute of Technology | PhD Computer Science | Rejected | Feb 20 | No | No | No |
+| **University of Oxford | MSc Computer Science | Accepted | Mar 16 | Yes | Pradic | No** | 
+
+I met some of the other students who were admitted to PhD programs. Many had many more top conference papers than I did, and still did not get in the top programs, so I thought my results were pretty fair.
 
 Reading
 ------
+I really liked two of the books from my modern chinese literature class.
 
+**Red Azalea by Anchee Min.** I read this book like it was *The Girl with the Dragon Tattoo*, it was really engaging. It's about Anchee Min's experience in the countryside and her relationship with Yan, her commander. I got some insight into what it was like doing endless labor as a rusticated youth in the countryside. Anchee's open vulnerability touched my heart.
 
+**Shanghai Baby by Wei Hui.** I liked this book because of how dynamic, creative, and relative Wei Hui seems to be. I would like to re-read it sometime.
 
 
 Who are my heroes?
 ------
-
+- My advisor, Lorenzo, has a creative and rigorous research mindset.
+- [Eden](https://www.youtube.com/channel/UC-ZsN5evqmSVo3_SJyQe9yA)'s music is so creative.
 
 Closing
 ------
-
-
+Winter term passed by quickly. It was a lot of fun visiting other schools for open houses. I worked a lot but I feel like not a lot of progress was made. It's nostalgic for me that I might not see my Dartmouth friends again because of COVID-19.
 
 Songs
 ------
+- [Juice](https://www.youtube.com/watch?v=XaCrQL_8eMY) by Lizzo
 
+<img src='/images/20w/IMG_3826.jpeg' width="32%">
+<img src='/images/20w/IMG_3896.jpeg' width="32%">
+<img src='/images/20w/IMG_3884.jpeg' width="32%">
+Left, Dartmouth snow; middle, NH-VT bridge; right, New Hampshire nature painting in the Hood Museum.
 
 
