update blog post

--- a/_posts/2020-3-13-blog-post-12.md
+++ b/_posts/2020-3-13-blog-post-12.md
@@ -9,31 +9,16 @@ tags:
   - grad school
 ---
 
+For my first term in the new decade, I started a senior thesis, got accepted to grad school, and lived in my fraternity house.
+
 Senior Thesis
 ------
 I am very fortunate to work with Lorenzo Torresani for my senior thesis this term. 
 He explains things cleary and has shown on multiple occasions that he understands low-level details better than I expected. 
 I worked on some curriculum learning ideas applied to self-supervised learning, and my work is still in progress. 
 
-It was nice to have a desk in the machine learning lab at Dartmouth. 
-Through the lab, I learned a lot from Yiren and Ruibo, who PhD students in the lab, and got to know Soroush, a Dartmouth professor who works on social media and NLP.
-
-Coursework
-------
-**Love and Desire in Modern Chinese Literature (ASCL 60).**
-This class explored a number of short stories and novellas written by Chinese authors from 1900-2000, translated into english.
-I interpreted stories from early 1900s as cautionary tales against free love during the time of arranged marriages. 
-Later stories, many of which were memoirs, talked about love despite the oppression of the Chinese government during the rusticated youth period or love in contrast with the context of traditional chinese life. 
-I liked Professor Gibbs, who taught the class, and he pushed me to further explore my interest in reading as a reflection of the reader and writing as a reflection of the writer. 
-My takeaway from this course is to approach reading as "borrowing someone else's mind," which can give us insight into how people from different time periods lived and help us learn from those experiences. 
-
-**Impact Design (COSC 29).** 
-This class was about how to design products to *delight* people.
-The main project of the course was designing projects for two autistic children at a nearby school.
-The kids we were designing for, Lilly and Riley, had developmental ages around 2-4 and loved to listen to music.
-Our team designed a personalized storybook with their favorite songs that played when they pressed a button.
-The kids and their caretakers seemed to love our toys, and I loved working with them.
-Having grown up going to a magnet high school and Dartmouth, I had never interacted much with autistic children, and so this was a magical experience for me.
+It was also nice to have a desk in the machine learning lab at Dartmouth. 
+Through the lab, I learned a lot from Yiren and Ruibo, PhD students in the lab, and got to know Soroush, a Dartmouth professor who works on social media and NLP.
 
 Tri-Kap
 ------
@@ -55,7 +40,7 @@ Moreover, although CMU has many strong faculty in NLP, some faculty were compara
 
 **University of Southern California.** I visited LA from March 5-7 for the open house for admitted PhD students. 
 My potential advisor, Nanyun Peng, was very nice, and I liked everyone in the lab. 
-LA as a location was great, especially with the Information Sciences Institute (ISI) near Marina del Rey. 
+LA as a location is great, especially with the Information Sciences Institute (ISI) near Marina del Rey. 
 I felt better about the student body at USC (everyone seems happy) than at CMU. 
 Two important logistical considerations for me were that the lab space at ISI was quite small, and that the commute from USC to ISI can take up to an hour. 
 
@@ -64,37 +49,54 @@ Two important logistical considerations for me were that the lab space at ISI wa
 <img src='/images/20w/IMG_7245.jpeg' width="32%">
 Left, me with my friend Yuxuan on the Randy Pausch Memorial Bridge; middle, Muscle Beach; right, USC grad school crew.
 
+Coursework
+------
+**Love and Desire in Modern Chinese Literature (ASCL 60).**
+This class explored a number of twentieth-century short stories and novellas written by Chinese authors and translated into english.
+I interpreted stories from early 1900s as cautionary tales against free love during the time of arranged marriages. 
+Later stories, many of which were memoirs, talked about love despite the oppression of the Chinese government during the rusticated youth period or love in contrast with the traditional chinese lifestyle. 
+I liked Professor Gibbs, who taught the class and pushed me to further explore my interest in reading as a reflection of the reader and writing as a reflection of the writer. 
+My takeaway from this course is to approach reading as "borrowing someone else's mind," which can give us insight on how people from different time periods lived and help us learn from their experiences. 
+
+**Impact Design (COSC 29).** 
+This class was about how to design products, with an emphasis on *delight*.
+The main project of the course was designing projects for two autistic children at a nearby school.
+The kids we were designing for, Lilly and Riley, had developmental ages around 2-4 and loved to listen to music.
+Our team designed a personalized storybook with their favorite songs that played when they pressed a button.
+The kids and their caretakers seemed to love our toys, and I loved working with them.
+Having grown up going to a magnet high school and Dartmouth, I had never interacted much with autistic children, and so this experience was magical for me.
+
+Applying to Grad School
+------
+I dreamed of getting into a top PhD program in natural language processing, but when I applied, I had no idea how competitive it would be to get in the top programs. 
+It turns out that few people make it to the top programs. 
+At Stanford, there are four faculty in the NLP group, and I didn't know any of them or anyone who knew them. 
+MIT only has two (?) faculty working on NLP. 
+University of Washington, my realistic reach school, has several faculty, but it remained pretty competitive, with only 100 students accepted from 2000 applicants to the CS program. 
+Here are my results:
+
+| School | Program | Outcome | Notification | Prediction | Interview | Knew a Prof | 
+|--------|---------|---------|-------------------|------------|-----------|-------------|
+| **University of Cambridge** | MPhil | **Accepted** | Jan 29 | Maybe | Vlachos | Yes |
+| **Carnegie Mellon University** | PhD | **Accepted (Masters)** | Feb 3 | No | Neubig | No | 
+| Princeton University | PhD Computer Science | Rejected | Feb 5 | Yes | No | No | 
+| University of Washington | PhD Computer Science | Rejected | Feb 7 | Maybe | Althoff | No | 
+| Stanford University | PhD Computer Science | Rejected | Feb 11 | No | No | No | 
+| **University of Southern California** | PhD Computer Science | **Accepted** | Feb 19 | Yes | Waived | Yes | 
+| Massachusetts Institute of Technology | PhD Computer Science | Rejected | Feb 20 | No | No | No |
+| **University of Oxford** | MSc Computer Science | **Accepted** | Mar 16 | Yes | Pradic | No | 
+
+I met some of the other students who were admitted to PhD programs. Many had many more top conference papers than I did, and still did not get in the top programs, so I thought my results were pretty fair.
+
 Health & Fitness
 ------
 **Working out.** I worked out relatively consistently this term, except for two weeks when I was sick.
 I lifted every sunday with my friends John and Prahlad, and it was a blast. 
 I focused on good form and did lower body exercises on machines to recover from my injury, and did some cardio. 
 I ate a pretty good diet, with not so many carbs. 
-By the end of the term, I weighed 143 (compared with my original weight of 150), and could still bench 175 for 1. 
+By the end of the term, I weighed 143 lbs (compared with my original weight of 150 lbs), and could still bench 175 for 1. 
 
 **Physical therapy.** I went to see Dr. Samuel Johnson, a physical therapist at the DHMC Heater Road. He told me that my leg muscles were quite tight and that I should stretch my hamstrings and IT bands. He gave me a good program and told me that I should even do weighted squats, which I was pretty wary of doing.
-
-Applying to Grad School
-------
-I dreamed of getting into a top PhD program in natural language processing, but when I applied, I had no idea how competitive it would be to get in the top programs. 
-It turns out that very few people make it to the top programs. 
-At Stanford, there are four faculty in the NLP group, and I didn't know any of them or anyone who knew them. 
-MIT only has two (?) faculty working on NLP. 
-University of Washington, my realistic reach school, has several faculty, but it remained pretty competitive, with only 100 students accepted from 2000 applicants to the CS program. 
-Here are my results:
-
-| School | Program | Outcome | Notification Date | My Prediction | Interview | Knew a Prof | 
-|--------|---------|---------|-------------------|------------|-----------|-------------|
-| **University of Cambridge | MPhil Computer Science | Accepted | Jan 29 | Maybe | Vlachos | Yes** |
-| **Carnegie Mellon University | PhD Language Technology | Accepted (Masters) | Feb 3 | No | Neubig | No** | 
-| Princeton University | PhD Computer Science | Rejected | Feb 5 | Yes | No | No | 
-| University of Washington | PhD Computer Science | Rejected | Feb 7 | Maybe | Althoff | No | 
-| Stanford University | PhD Computer Science | Rejected | Feb 11 | No | No | No | 
-| **University of Southern California | PhD Computer Science | Accepted | Feb 19 | Yes | Waived | Yes** | 
-| Massachusetts Institute of Technology | PhD Computer Science | Rejected | Feb 20 | No | No | No |
-| **University of Oxford | MSc Computer Science | Accepted | Mar 16 | Yes | Pradic | No** | 
-
-I met some of the other students who were admitted to PhD programs. Many had many more top conference papers than I did, and still did not get in the top programs, so I thought my results were pretty fair.
 
 Reading
 ------
@@ -114,13 +116,13 @@ Closing
 ------
 Winter term passed by quickly. It was a lot of fun visiting other schools for open houses. I worked a lot but I feel like not a lot of progress was made. It's nostalgic for me that I might not see my Dartmouth friends again because of COVID-19.
 
-Songs
-------
-- [Juice](https://www.youtube.com/watch?v=XaCrQL_8eMY) by Lizzo
-
 <img src='/images/20w/IMG_3826.jpeg' width="32%">
 <img src='/images/20w/IMG_3896.jpeg' width="32%">
 <img src='/images/20w/IMG_3884.jpeg' width="32%">
 Left, Dartmouth snow; middle, NH-VT bridge; right, New Hampshire nature painting in the Hood Museum.
+
+Songs
+------
+- [Juice](https://www.youtube.com/watch?v=XaCrQL_8eMY) by Lizzo
 
 
