--- a/_posts/2020-3-13-blog-post-12.md
+++ b/_posts/2020-3-13-blog-post-12.md
@@ -75,16 +75,16 @@ MIT only has two (?) faculty working on NLP.
 University of Washington, my realistic reach school, has several faculty, but it remained pretty competitive, with only 100 students accepted from 2000 applicants to the CS program. 
 Here are my results:
 
-| School | Program | Outcome | Notification | Prediction | Interview | Knew a Prof | 
+| School | Program | Outcome | Notified | Prediction | Interview | Connection | 
 |--------|---------|---------|-------------------|------------|-----------|-------------|
-| **University of Cambridge** | MPhil | **Accepted** | Jan 29 | Maybe | Vlachos | Yes |
-| **Carnegie Mellon University** | PhD | **Accepted (Masters)** | Feb 3 | No | Neubig | No | 
-| Princeton University | PhD Computer Science | Rejected | Feb 5 | Yes | No | No | 
-| University of Washington | PhD Computer Science | Rejected | Feb 7 | Maybe | Althoff | No | 
-| Stanford University | PhD Computer Science | Rejected | Feb 11 | No | No | No | 
-| **University of Southern California** | PhD Computer Science | **Accepted** | Feb 19 | Yes | Waived | Yes | 
-| Massachusetts Institute of Technology | PhD Computer Science | Rejected | Feb 20 | No | No | No |
-| **University of Oxford** | MSc Computer Science | **Accepted** | Mar 16 | Yes | Pradic | No | 
+| **University of Southern California** | **PhD** | **Accepted** | **Feb 19** | **Yes** | **Waived** | **Yes** | 
+| **Carnegie Mellon University** | **PhD** | **Accepted (Masters)** | **Feb 3** | **No** | **Neubig** | **No** |
+| **University of Cambridge** | **MPhil** | **Accepted** | **Jan 29** | **Maybe** | **Vlachos** | **Yes** | 
+| **University of Oxford** | **MSc** | **Accepted** | **Mar 16** | **Yes** | **Pradic** | **No** | 
+| Princeton University | PhD | Rejected | Feb 5 | Yes | No | No | 
+| University of Washington | PhD | Rejected | Feb 7 | Maybe | Althoff | No | 
+| Stanford University | PhD | Rejected | Feb 11 | No | No | No | 
+| Massachusetts Institute of Technology | PhD | Rejected | Feb 20 | No | No | No |
 
 I met some of the other students who were admitted to PhD programs. Many had many more top conference papers than I did, and still did not get in the top programs, so I thought my results were pretty fair.
 
