--- a/_posts/2020-3-13-blog-post-12.md
+++ b/_posts/2020-3-13-blog-post-12.md
@@ -86,7 +86,7 @@ Here are my results:
 | Stanford University | PhD | Rejected | Feb 11 | No | No | No | 
 | Massachusetts Institute of Technology | PhD | Rejected | Feb 20 | No | No | No |
 
-I met some of the other students who were admitted to PhD programs. Many had many more top conference papers than I did, and still did not get in the top programs, so I thought my results were pretty fair.
+I met some of the other students who were admitted to PhD programs. Many had many more top conference papers than I did, and still did not get in the top programs, so I thought my results were pretty fair. You can view my [CV](/files/Jason_Wei_SOP_CMU.pdf) and [Statement of Purpose](/files/Jason_Wei_CV_CMU.pdf) that I submitted for CMU. 
 
 Health & Fitness
 ------
