--- a/_posts/2019-12-22-blog-post-11.md
+++ b/_posts/2019-12-22-blog-post-11.md
@@ -156,6 +156,7 @@ Who are my heroes?
 * Most tennis players have an idol that they want to play like (usually Federer, but I like Djokovic more). Well, I code, and my coding idol is my mentor from Blend, Danny Hermes.
 * [uuuuuuuukewithme](https://www.youtube.com/watch?v=XnRI7gH_kro)'s singing and persona are so great.
 * Paul Graham writes [excellent blog posts](http://www.paulgraham.com/love.html#f3n).
+* Jodie Comer is so good in *Killing Eve*.
 
 Closing
 ------
