--- a/_drafts/2020-6-15-blog-post-13.md
+++ b/_drafts/2020-6-15-blog-post-13.md
@@ -26,6 +26,10 @@ Coursework
 Health & Fitness
 ------
 
+Other Research
+------
+Mentoring my brother for his own research with Saeed has been a big learning experience for me. It gave me some insights from being able to take the perspective of the mentor, and try to use these insights to be a better student. For example, "your boss wants a result, not an excuse."
+
 
 Reading
 ------
