--- a/_posts/2020-3-13-blog-post-12.md
+++ b/_posts/2020-3-13-blog-post-12.md
@@ -124,5 +124,6 @@ Left, Dartmouth snow; middle, NH-VT bridge; right, New Hampshire nature painting
 Songs
 ------
 - [Juice](https://www.youtube.com/watch?v=XaCrQL_8eMY) by Lizzo
-
+- [You Shook Me All Night Long](https://www.youtube.com/watch?v=Lo2qQmj0_h4) by AD/DC
+- [Faith](https://www.youtube.com/watch?v=9LrKYsOgVRw) by Galantis and Dolly Parton
 
