--- a/_drafts/2020-6-15-blog-post-13.md
+++ b/_drafts/2020-6-15-blog-post-13.md
@@ -25,11 +25,13 @@ Coursework
 
 Health & Fitness
 ------
+Every Monday, Wednesday, and Saturday, I video called my friends Prahlad and Sully to do a home workout together.
+We did Athlean-X's home workout twice a week and Sully's workout once a week. 
+I also trained table tennis around 4 times a week with my brother, and we both improved a lot.
 
 Other Research
 ------
 Mentoring my brother for his own research with Saeed has been a big learning experience for me. It gave me some insights from being able to take the perspective of the mentor, and try to use these insights to be a better student. For example, "your boss wants a result, not an excuse."
-
 
 Reading
 ------
@@ -39,6 +41,7 @@ Who are my heroes?
 ------
 * Sam Harris speaks clearly and eloquently on spirituality and the landscape of mind.
 * [Mike Chen](https://www.youtube.com/user/MikeyChenX) is the most wholesome guy. 
+* [Thomas Afu](https://www.youtube.com/channel/UC689uDf0ryZniKpuSK9ESTw) has taught me a lot of Chinese.
 
 Closing
 ------
