--- a/_drafts/2020-6-15-blog-post-13.md
+++ b/_drafts/2020-6-15-blog-post-13.md
@@ -12,7 +12,9 @@ Intro lines
 
 Senior Thesis
 ------
-
+My advisor, Lorenzo, gave two valuable pieces of feedback specific during our last meeting. 
+1. His style of research is relatively flexible (my words) to changing research directions or switching problems based on promising results from initial experiments. I wasn't so eager to adapt this style but I think it has a lot of merit.
+2. His second piece of advice regarding experiments is to start by replicating baseline results from prior work so that any new methods can be compared immediately with the baseline.
 
 Living at Home
 ------
@@ -27,6 +29,8 @@ Health & Fitness
 ------
 Every Monday, Wednesday, and Saturday, I video called my friends Prahlad and Sully to do a home workout together.
 We did Athlean-X's home workout twice a week and Sully's workout once a week. 
+
+
 I also trained table tennis around 4 times a week with my brother, and we both improved a lot.
 
 Other Research
@@ -40,7 +44,7 @@ Reading
 Who are my heroes?
 ------
 * Sam Harris speaks clearly and eloquently on spirituality and the landscape of mind.
-* [Mike Chen](https://www.youtube.com/user/MikeyChenX) is the most wholesome guy. 
+* [Mike Chen](https://www.youtube.com/user/MikeyChenX) is the most wholesome guy.
 * [Thomas Afu](https://www.youtube.com/channel/UC689uDf0ryZniKpuSK9ESTw) has taught me a lot of Chinese.
 
 Closing
