--- a/_drafts/2020-6-15-blog-post-13.md
+++ b/_drafts/2020-6-15-blog-post-13.md
@@ -8,39 +8,62 @@ tags:
   - nlp
 ---
 
-Intro lines
+For my senior spring, I lived at home, got in a daily routine, and spent a lot of time on research.
 
 Senior Thesis
 ------
-My advisor, Lorenzo, gave two valuable pieces of feedback specific during our last meeting. 
+My senior thesis, which initially aimed to investigate curriculum learning in the context of self-supervised learning, ended up studying how to weigh per-example gradients in the noisy label scenario.
+Per-example gradients actually had signal in helping find mislabeled data, and although the improvements are marginal, I am excited by the simplicity of our approach and the potential for future research on per-example gradients.
+
+My advisor, Lorenzo, gave me two valuable pieces of feedback specific during our last meeting. 
 1. His style of research is relatively flexible (my words) to changing research directions or switching problems based on promising results from initial experiments. I wasn't so eager to adapt this style but I think it has a lot of merit.
 2. His second piece of advice regarding experiments is to start by replicating baseline results from prior work so that any new methods can be compared immediately with the baseline.
 
 Living at Home
 ------
+Living at home is absolutely amazing. 
+I get to spend time with my mom and brother, my mom cooks Chinese food, and my house is so comfortable.
+At home, I tried to spend some time (at least 15 minutes) each day playing piano. I learned *River Flows In You* by Yiruma, *Cynthia's Theme* from Pokemon, *24 Préludes, Op. 28, No. 4, Largo in E Minor* by Chopin, and *Moonlight Sonata, 3rd Movement* by Beethoven. 
+
+Insert a picture here
 
 Coursework
 ------
-**Reading course on self-supervised learning in NLP.**
+**Reading course in NLP.**
+I started off with some small experiments on different self-supervised tasks in NLP, but none of them worked since I think they were not similar enough to the downstream task. 
+After a couple of weeks, I spent my time working on a counseling conversations project with some folks from the Psychology department. It can be hard to work with multiple people from another field, but I learned a lot about linguistic complexity measures. 
 
 **Data stream algorithms (CS 35).**
+I was required to take this class for my major, and I ended up liking it more than I thought I would.
+Most of the data stream algorithms used randomization to get within some error of a good estimation after being run many times with the results being averaged. 
+For the final project, I took a deep dive into a paper on k-means clustering in the streaming setting. 
 
 Health & Fitness
 ------
-Every Monday, Wednesday, and Saturday, I video called my friends Prahlad and Sully to do a home workout together.
+Every Monday, Wednesday, and Saturday at 5pm, I video called my friends Prahlad and Sully to do a home workout together.
 We did Athlean-X's home workout twice a week and Sully's workout once a week. 
+Towards the end of the term, we did 100 pull ups, 200 push ups, and 200 situps, which took 40 minutes, as easier variation of the Murph Challenge.
 
+At the beginning of quarantine, I trained table tennis around 4 times a week with my brother for about a month, and we both improved a lot.
+Later on, when the weather got better, I played tennis with Abhishek and William whenever we could. I had to be careful about straining my IT band since I felt some tension in my knee everytime after we played, but rolling my IT band periodically when playing seemed to help.
+To decrease my risk of injury from playing tennis, I tried to lose weight by limiting my consumption of rice and pork buns to once a day on non-lifting days, dropping to about 143 pounds.  
 
-I also trained table tennis around 4 times a week with my brother, and we both improved a lot.
+Insert a picture here
 
 Other Research
 ------
-Mentoring my brother for his own research with Saeed has been a big learning experience for me. It gave me some insights from being able to take the perspective of the mentor, and try to use these insights to be a better student. For example, "your boss wants a result, not an excuse."
+**More GANs for histopathology image analysis.** Mentoring my brother for his own research with Saeed has been a big learning experience for me. 
+It gave me some insights from the perspective of the mentor, which I hope to use these insights to be a better student. 
+For example, "your boss wants a result, not an excuse."
 
-Reading
+**COVID Questions Dataset.** I also mentored my brother on collecting a dataset of COVID questions, for which we formulated question-category and question-class classification tasks. Hopefully this can be useful for the community.
+
+Reflecting on My College Experience
 ------
-
-
+- Talk about the major events of each term
+- What were the most rewarding experiences of college
+- Most important lessons learned
+- What are some regrets
 
 Who are my heroes?
 ------
