update jason's notes

--- a/_drafts/2020-6-15-blog-post-13.md
+++ b/_drafts/2020-6-15-blog-post-13.md
@@ -60,10 +60,20 @@ For example, "your boss wants a result, not an excuse."
 
 Reflecting on My College Experience
 ------
-- Talk about the major events of each term
-- What were the most rewarding experiences of college
-- Most important lessons learned
-- What are some regrets
+- Go over each year and the memorable events
+	- Freshman year: club tryouts, actual clubs, fencing, relationship, Protago Labs
+	- Sophomore year: Learned more about ML, Iceland, Oracle, Tabard, Tri-Kap, Australia
+	- Denmark: living in Denmark, traveling, went to grand canyon
+	- Junior year: Winter spent at home doing research, had my first paper published; Spring: ICLR and Montreal
+	- SF: the city, Blend and DoorDash, EMNLP, seeing brother giving talk at NeurIPS, recruiting culture of SF
+	- Senior year: getting in grad school, thesis, spring at home, got offers at Google and FB
+- Elaborate on your overall experience on these topics: fraternities, traveling abroad, research, lifting, digital minimalism
+- How did you change from the beginning of college to the end of college?
+- What goals did you have, and how did you feel when you achieved them? Got Blend offer, first paper, EMNLP paper, grad school, getting Google offer; girlfriend
+- What's your overall review of Dartmouth? small school, frats good, CS not good, opportunities for research
+- Goals for the next five, ten, and twenty years?
+- How was your relationship with your family?
+- Who were the last ten people that you texted?
 
 Who are my heroes?
 ------
