--- a/_posts/2019-12-22-blog-post-11.md
+++ b/_posts/2019-12-22-blog-post-11.md
@@ -79,7 +79,7 @@ NeurIPS
 
 I went to Vancouver for one day to attend the Machine Learning for Health Workshop at NeurIPS.
 It was pretty surreal seeing my brother, a high school student, present his work to over 500 people as a spotlight talk.
-The recording is [here](https://slideslive.com/38921879/machine-learning-for-health-ml4h-what-makes-machine-learning-in-medicine-different-2) (starts at 56:03). 
+The recording is [here](https://slideslive.com/38923239/spotlight-paper-talks?t=1095) (starts at 18:15). 
 I'm so proud of him.
 
 Research
