add blog content

--- a/_drafts/2020-6-15-blog-post-13.md
+++ b/_drafts/2020-6-15-blog-post-13.md
@@ -25,7 +25,9 @@ Living at home is absolutely amazing.
 I get to spend time with my mom and brother, my mom cooks Chinese food, and my house is so comfortable.
 At home, I tried to spend some time (at least 15 minutes) each day playing piano. I learned *River Flows In You* by Yiruma, *Cynthia's Theme* from Pokemon, *24 Préludes, Op. 28, No. 4, Largo in E Minor* by Chopin, and *Moonlight Sonata, 3rd Movement* by Beethoven. 
 
-Insert a picture here
+<img src='/images/house_desk_1.jpg' width="32%">
+<img src='/images/house_desk_2.jpg' width="32%">
+<img src='/images/moms_meatballs.jpg' width="32%">
 
 Coursework
 ------
@@ -48,7 +50,8 @@ At the beginning of quarantine, I trained table tennis around 4 times a week wit
 Later on, when the weather got better, I played tennis with Abhishek and William whenever we could. I had to be careful about straining my IT band since I felt some tension in my knee everytime after we played, but rolling my IT band periodically when playing seemed to help.
 To decrease my risk of injury from playing tennis, I tried to lose weight by limiting my consumption of rice and pork buns to once a day on non-lifting days, dropping to about 143 pounds.  
 
-Insert a picture here
+<video src="/images/tennis.mov" width="100%" autoplay loop muted></video>
+Hitting with Abhishek.
 
 Other Research
 ------
