--- a/_posts/2020-6-15-blog-post-13.md
+++ b/_posts/2020-6-15-blog-post-13.md
@@ -63,20 +63,7 @@ For example, "your boss wants a result, not an excuse."
 
 Reflecting on My College Experience
 ------
-- Go over each year and the memorable events
-	- Freshman year: club tryouts, actual clubs, fencing, relationship, Protago Labs
-	- Sophomore year: Learned more about ML, Iceland, Oracle, Tabard, Tri-Kap, Australia
-	- Denmark: living in Denmark, traveling, went to grand canyon
-	- Junior year: Winter spent at home doing research, had my first paper published; Spring: ICLR and Montreal
-	- SF: the city, Blend and DoorDash, EMNLP, seeing brother giving talk at NeurIPS, recruiting culture of SF
-	- Senior year: getting in grad school, thesis, spring at home, got offers at Google and FB
-- Elaborate on your overall experience on these topics: fraternities, traveling abroad, research, lifting, digital minimalism
-- How did you change from the beginning of college to the end of college?
-- What goals did you have, and how did you feel when you achieved them? Got Blend offer, first paper, EMNLP paper, grad school, getting Google offer; girlfriend
-- What's your overall review of Dartmouth? small school, frats good, CS not good, opportunities for research
-- Goals for the next five, ten, and twenty years?
-- How was your relationship with your family?
-- Who were the last ten people that you texted?
+I made a [video](https://www.youtube.com/watch?v=qK9g0nLrjv8) talking about it that I hope to watch in the future for fun.
 
 Who are my heroes?
 ------
@@ -87,11 +74,11 @@ Who are my heroes?
 
 Closing
 ------
-
+I am so grateful to have had a peaceful term at home and to have attended Dartmouth.
 
 Songs
 ------
 * [Caution](https://www.youtube.com/watch?v=uU6PLP0PX2g) by The Killers is the best song I've heard in a while and my new victory song.
 
-
+<img src='/images/graduation.jpg' width="97%">
 
